tests/paczka1/small_fuzzy/13603524.err
Error in line 1: 4hst20Jh S766 93,6
Error in line 3: AenSdYB A522 28,4
Error in line 14: SUJwF8ITs A522 45,9
